# RGAeditor

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md
.cache/clangd/index/: main.cpp.3A42AB67138C3A48.idx
server/: CMakeLists.txt
server/src/: main.cpp
